# drone_racing_msgs

./: CMakeLists.txt  package.xml
msg/: Action.msg  EpisodeEnd.msg  EpisodeReset.msg  Observations.msg  RaceEnd.msg  StepResult.msg
